# mba-ia-desafio-ingestao-busca

./: README.md  pyproject.toml  requirements.txt
src/: chat.py  config.py  ingest.py  prompts.py  search.py
src/services/: __init__.py  embeddings.py  llm.py  vector_store.py
